--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="UTF-8">
-  <title>Angular Demo</title>
+  <title>Welcome to MCA'17</title>
 
 
 <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
