--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Welcome to MCA'17</title>
 
-
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
 <script>
   // Initialize Firebase
